[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "6658Lib"
version = "0.0.1"
authors = [
  { name="entityJY", email="jomathya07@gmail.com" },
]
description = "A package containing code used for FRC team 6658"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/EagleRockbotics/6658LibFRC"
Issues = "https://github.com/EagleRockbotics/6658LibFRC/issues"